# tbro_ros2

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
docs/: TBRO_node_sequence_diagram.iuml  liosam_integration.iuml  sequence_diagram.iuml
tbro/: deep_ro_enc_only.py  mimo_dataset.py  parameters.py  tbro_node.py
tbro/models/: kremer_original.py
tbro/scripts/callbacks/: attention_plot.py
tbro/scripts/models/: deepro_dec.py  deepro_enc_reduced.py  deepro_lstm.py  deepro_lstm_enc.py  deepro_pos_enc.py  deepro_transformer.py  deepro_transformer_enc.py  deepro_transformer_reduced_enc.py  deepro_transformer_vivit.py  kramer_original.py
tbro/scripts/unit_tests/: create_sequence.py  enc_radar_images.py  lightning_enc_test.py  lightning_lstm_enc_test.py  lightning_tf_enc_test.py  lightning_tf_test.py  lightning_tf_test_reduced_cnn.py  lightning_vivit_test.py  odometry2track_test.py  param_checker.py  path_error_analysis.py  train_enc.py  train_enc_batch.py
tbro/scripts/utils/: callbacks.py  csv_export.py  dataset.py  dataset_creator.py  enc_dataset.py  losses.py  model_editor.py  params.py
tbro_ros2/: mimo_dataset.py  tbro_ros2_node.py
tbro_ros2/models/: deepro_enc.py  kremer_original.py
visualization/: gt_tbro_liosam.rviz
